# school-image

./: .gitignore  main.py  pyproject.toml
model/: embedding.py  school.py  siamese_net.py  spectral_net.py  spectral_net_trainer.py  trainer.py
model/utils/: utils.py
utils/: logger.py  loss.py  metrics.py  utils.py
