[project]
name = "school-image"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib==3.8.0",
    "numpy==1.24.1",
    "scikit-learn==1.3.0",
    "scipy==1.11.1",
    "pandas==2.0.3",
    "seaborn==0.12.2",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "torchvision==0.22.0",
    "munkres==1.1.4",
    "tqdm==4.67.1",
]


[tool.uv.sources]
torch = { index = "torch-gpu" }
torchaudio = { index = "torch-gpu" }
torchvision = { index = "torch-gpu" }

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
